--- a/where_waldo/static/css/main.css
+++ b/where_waldo/static/css/main.css
@@ -43,3 +43,12 @@ body {
     background-color: #F5F5F5;
     border: solid 1px lightgrey;
 }
+
+#result {
+    text-align: center;
+}
+
+.result-img {
+    max-width: 1000px;
+    max-height: 700px;
+}
